# agent-history

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape  install.sh
.beads/: metadata.json
.github/workflows/: ci.yml  install.yml  release.yml
docs/: ARCHITECTURE.md
src/: action.rs  app.rs  cli.rs  config.rs  error.rs  event.rs  export.rs  filter.rs  lib.rs  main.rs  model.rs  output.rs  paths.rs  search.rs
src/commands/: list.rs  search.rs  show.rs
src/model/: message.rs  mod.rs  provider.rs  session.rs
src/provider/: claude_code.rs  codex.rs  codex_cli.rs  copilot.rs  copilot_cli.rs  error.rs  gemini.rs  gemini_cli.rs  mod.rs  opencode.rs  registry.rs
src/provider/claude/: mod.rs  types.rs
src/ui/: message_view.rs  mod.rs  session_list.rs  status_bar.rs
tests/: cli_e2e.rs  config_integration.rs  cross_component.rs  e2e.rs  event_loop_integration.rs  export.rs  performance.rs  provider_detection.rs  provider_format_diagnostic.rs  provider_integration.rs  snapshots.rs  terminal_lifecycle.rs
tests/common/: fixtures.rs  helpers.rs  mod.rs
tests/fixtures/claude/: history.jsonl
tests/fixtures/claude/projects/test-project/: session-abc123.jsonl
tests/fixtures/codex/2026/04/08/: rollout-test123.jsonl
tests/fixtures/codex_v2/2026/04/10/: rollout-test-v2.jsonl
tests/fixtures/copilot/session-uuid-1/: events.jsonl  workspace.yaml
tests/fixtures/copilot_v2/session-v2-001/: events.jsonl  workspace.yaml
tests/fixtures/edge_cases/claude/: history.jsonl
tests/fixtures/edge_cases/claude/projects/empty-project/: session-corrupt.jsonl  session-empty.jsonl
tests/fixtures/edge_cases/codex/2026/01/01/: rollout-corrupt.jsonl  rollout-empty.jsonl
tests/fixtures/edge_cases/copilot/empty-session/: workspace.yaml
tests/fixtures/edge_cases/gemini/tmp/bad-project/chats/: session-bad.json
tests/fixtures/edge_cases/opencode/session/proj-empty/: session-empty.json
tests/fixtures/gemini/: projects.json
tests/fixtures/gemini/tmp/test-project/chats/: session-001.json
tests/fixtures/opencode/message/sess-001/: msg-001.json  msg-002.json
tests/fixtures/opencode/session/proj-hash-1/: session-001.json
tests/fixtures/opencode_v2/message/ses-v2-001/: msg-v2-001.json  msg-v2-002.json
tests/fixtures/opencode_v2/part/msg-v2-001/: prt-001.json
tests/fixtures/opencode_v2/part/msg-v2-002/: prt-010.json  prt-011.json  prt-012.json  prt-013.json
tests/fixtures/opencode_v2/session/proj-hash-1/: ses-v2-001.json
tests/snapshots/: snapshots__snapshot_browse_mode.snap  snapshots__snapshot_browse_mode_selection_moved.snap  snapshots__snapshot_empty_state.snap  snapshots__snapshot_filter_panel.snap  snapshots__snapshot_help_overlay.snap  snapshots__snapshot_message_view.snap  snapshots__snapshot_message_view_with_tool_calls.snap  snapshots__snapshot_search_mode.snap
