[package]
name = "agent-history"
version = "0.1.0"
edition = "2024"
description = "Browse and search AI coding agent conversation history"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
