[package]
name = "aghist"
version = "0.1.0"
edition = "2021"
description = "Cross-platform TUI for viewing and searching AI agent conversation history"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossbeam-channel = "0.5"
crossterm = "0.28"
directories = "5"
lru = "0.12"
ratatui = "0.29"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
tantivy = "0.22"
unicode-width = "0.2"

[dev-dependencies]
insta = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2
