[package]
name = "aghist"
version = "0.2.0"
edition = "2021"
description = "Cross-platform TUI for viewing and searching AI agent conversation history"
license = "MIT"
repository = "https://github.com/Tien-Lam/agent-history"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossbeam-channel = "0.5"
crossterm = "0.28"
directories = "5"
lru = "0.16"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"
tantivy = "0.22"

[target.'cfg(not(windows))'.dependencies]
self_update = { version = "0.42", default-features = false, features = [
    "archive-tar", "compression-flate2", "rustls",
] }

[target.'cfg(windows)'.dependencies]
self_update = { version = "0.42", default-features = false, features = [
    "archive-zip", "compression-zip-deflate", "rustls",
] }

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2
